<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- APPLICATION -->
    <string name="app_name">lungo</string>
    <string name="action_settings">Settings</string>

    <!-- MAIN ACTIVITY -->
    <string name="activity_main_lungo">LUNGO</string>
    <string name="activity_main_stop_smoking">Seu primeiro passo para\nparar de fumar.</string>
    <string name="activity_main_start">Comece!</string>

    <!-- GOAL ACTIVITY -->
    <string name="activity_goal_title">Objetivo</string>
    <string name="activity_goal_create_goal">Crie um objetivo!</string>
    <string name="activity_goal_until_day">Até o dia</string>
    <string name="activity_goal_from_day">A partir do dia</string>
    <string name="activity_goal_day">01</string>
    <string name="activity_goal_month">JAN</string>
    <string name="activity_goal_year">2015</string>
    <string name="activity_goal_stop_smoking">Vou parar de fumar.</string>
    <string name="activity_goal_creating_goal">CRIAR OBJETIVO</string>

    <!-- CONTROL FRAGMENT -->
    <string name="fragment_control_title">Controle</string>
    <string name="fragment_control_today_cigarettes">Cigarros fumados\nhoje.</string>
    <string name="fragment_control_smoking_now">VOU\nFUMAR\nAGORA</string>

    <!-- STATISTICS FRAGMENT -->
    <string name="fragment_statistics_title">Estatísticas</string>
    <string name="fragment_statistics_follow_development">Acompanhe seu desenvolvimento!</string>
    <string name="fragment_statistics_by_day">por dia</string>
    <string name="fragment_statistics_by_month">por mês</string>
    <string name="fragment_statistics_by_year">por ano</string>
</resources>