<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lungo_gray"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_statistics"
        android:gravity="center_vertical"
        android:text="@string/fragment_statistics_title"
        android:textSize="28dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical"
        android:text="@string/fragment_statistics_follow_development"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/lungo_gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/lungo_white"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/fragment_statistics_by_day"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/lungo_white"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/fragment_statistics_by_month"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/lungo_white"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/fragment_statistics_by_year"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lungo_green"
        android:layout_weight="1"
        android:layout_margin="20dp" />
</LinearLayout>