<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lungo_blue_dark"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/activity_main_lungo"
        android:textColor="@color/lungo_white"
        android:textSize="80dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/activity_main_stop_smoking"
        android:textColor="@color/lungo_white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <!-- START -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/lungo_green_light"
        android:orientation="vertical">

        <Button
            android:id="@+id/id_start_button"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/lungo_green"
            android:text="@string/activity_main_start"
            android:textColor="@color/lungo_white"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>